--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2024.09.00"
 navigation="2.8.9"
 serialization = "1.6.3"
 coil = "2.4.0"
+materialIcons = "1.6.0"
+material3 = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +32,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
+material3-icons-extended = { module = "androidx.compose.material3:material3-icons-extended", version.ref = "material3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
