--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ serialization = "1.8.0"
 coil = "2.4.0"
 materialIcons = "1.6.0"
 datastore = "1.1.7"
+room = "2.7.1"
+ksp = "2.1.20-2.0.1"
 
 
 [libraries]
@@ -35,9 +37,13 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 datastore-preferences = {module ="androidx.datastore:datastore-preferences", version.ref = "datastore" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
