--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -13,6 +13,9 @@ serialization = "1.8.0"
 coil = "2.4.0"
 materialIcons = "1.6.0"
 datastore = "1.1.7"
+firebase = "23.2.1"
+retrofit = "3.0.0"
+logingInterceptor = "4.12.0"
 
 
 [libraries]
@@ -35,7 +38,10 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 datastore-preferences = {module ="androidx.datastore:datastore-preferences", version.ref = "datastore" }
-
+google-firebase = {module = "com.google.firebase:firebase-auth", version.ref = "firebase"}
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logingInterceptor" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
