--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ datastore = "1.1.7"
 room = "2.7.1"
 ksp = "2.1.20-2.0.1"
 voyager = "1.0.0-beta01"
+retrofit = "3.0.0"
+logingInterceptor = "4.12.0"
 
 
 [libraries]
@@ -42,6 +44,10 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logingInterceptor" }
+
 
 
 [plugins]
