:sparkles: Adding voyager

--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ ksp = "2.1.20-2.0.1"
 firebase = "23.2.1"
 retrofit = "3.0.0"
 logingInterceptor = "4.12.0"
+voyager = "1.0.0-rc04"
 
 
 [libraries]
@@ -48,6 +49,7 @@ logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercep
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
