--- a/Viridis/gradle/libs.versions.toml
+++ b/Viridis/gradle/libs.versions.toml
@@ -20,7 +20,8 @@ retrofit = "3.0.0"
 logingInterceptor = "4.12.0"
 voyager = "1.0.0-rc04"
 fcm = "24.1.2"
-gms = "18.3.0"
+gms = "18.7.0"
+tf ="2.13.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -53,6 +54,7 @@ room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "roo
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 firebase-messaging = {module = "com.google.firebase:firebase-messaging", version.ref = "fcm"}
 google-service = {module="com.google.android.gms:play-services-base", version.ref ="gms"}
+tensorflow = {module="org.tensorflow:tensorflow-lite", version.ref="tf"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
